--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,7 @@
+@import "compass";
+@import "compass/css3";
 @import "settings";
-@import "../FoundationPress/scss/app";
+// @import "../FoundationPress/scss/app";
 @import "custom"; // Custom child theme styles
 @import "foundation";
 
