adapted class for error label background

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -11,7 +11,7 @@ footer div ul li a {
     margin: 10px 0 0 0;
 }
 
-span.error, small.error {
+span.error {
     background-color: #92181c !important;
 }
 
